# rag-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md
eval/: ground_truth.py  rag_eval.ipynb  retrieval_eval.ipynb  search_eval.py
grafana/provisioning/dashboards/: dashboards.yml  rag_dashboard.json
grafana/provisioning/datasources/: postgres.yml
scripts/: try_pgvector_search.py
src/app/: agent.py  agent_toyaikit.py  api.py  config.py  db.py  embeddings.py  ingest.py  llm.py  rag.py  ui.py
src/app/embed/: __init__.py  download.py  onnx_embedder.py
src/app/retrieval/: __init__.py  base.py  hybrid.py  keyword.py  pgvector_store.py  vector.py
tests/: test_smoke.py
